--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -4,66 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_nu"
-    >
+    android:background="@color/green_nu">
+
+    <!--    <Button-->
+    <!--        android:id="@+id/payButton"-->
+    <!--        android:background="@drawable/main_button2"-->
+    <!--        android:fontFamily="@font/quicksand_bold"-->
+    <!--        android:gravity="center"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:paddingRight="60dp"-->
+    <!--        android:paddingLeft="60dp"-->
+    <!--        android:paddingBottom="10dp"-->
+    <!--        android:paddingTop="10dp"-->
+    <!--        android:layout_marginBottom="40dp"-->
+    <!--        android:text="Get Premium"-->
+    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
+    <!--        android:textColor="@color/dark_blue"-->
+    <!--        android:textSize="25dp"-->
+    <!--        app:elevation="10dp"-->
+    <!--        app:backgroundTint="@color/mustard"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent">-->
 
     <ImageView
         android:layout_width="300dp"
         android:layout_height="200dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/logoresize"
-        app:tint="@color/Secondary_green" />
+        app:tint="@color/dark_blue" />
+
     <Button
         android:id="@+id/payButton"
-        android:background="@drawable/main_button2"
-        android:fontFamily="@font/quicksand_bold"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="60dp"
-        android:paddingLeft="60dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="456dp"
+        android:background="@drawable/main_button"
+        android:fontFamily="@font/quicksand_bold"
+        android:gravity="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:text="Get Premium"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/dark_blue"
-        android:textSize="25dp"
-        app:elevation="10dp"
-        app:backgroundTint="@color/mustard"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
-    </Button>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.763" />
+
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:fontFamily="@font/quicksand_bold"
         android:text="Premium Plan"
+        android:textColor="@color/blue_nu"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/quicksand_bold"
         android:text="$4.99/month"
+        android:textColor="@color/blue_nu"
         android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/payButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,36 +93,37 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Premium Features"
+        android:layout_marginTop="56dp"
         android:fontFamily="@font/quicksand_bold"
+        android:textColor="@color/blue_nu"
+        android:text="Premium Features"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_semibold"
-        android:textSize="18dp"
-        android:layout_marginBottom="90dp"
         android:text="Get prices of each item"
-        app:layout_constraintBottom_toTopOf="@+id/payButton"
+        android:textSize="18dp"
+        android:textColor="@color/blue_nu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+        android:textColor="@color/blue_nu"
         android:fontFamily="@font/quicksand_semibold"
         android:text="Get help from an expert on call"
         android:textSize="18dp"
-        android:layout_marginBottom="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -112,6 +134,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_semibold"
         android:text="Add up to 100 items in list"
+        android:textColor="@color/blue_nu"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
