--- a/app/src/main/res/layout/add_new_task.xml
+++ b/app/src/main/res/layout/add_new_task.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="40dp"
     tools:context=".AddNewTask"
     android:background="@color/green_nu"
     >
@@ -17,7 +18,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/blue_nu"
         android:fontFamily="@font/quicksand_semibold"
-        android:textColor="@color/white"
+        android:textColor="@color/blue_nu"
         android:textColorHint="@color/blue_nu"
         android:hint="Write Your Grocery Item ...."
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,15 +31,15 @@
         android:layout_width="290dp"
         android:layout_height="46dp"
         android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textAlignment="center"
         android:background="@drawable/rounded_corner"
-        app:backgroundTint="@color/blue_nu"
         android:fontFamily="@font/quicksand_semibold"
+        android:gravity="center"
+        android:text="Save"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="20dp"
-        android:text="Save"
-        app:elevation="10dp"
+        app:backgroundTint="@color/blue_nu"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_edittext" />
