--- a/app/src/main/res/layout/activity_checklist_page.xml
+++ b/app/src/main/res/layout/activity_checklist_page.xml
@@ -31,7 +31,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_add_24"
         android:focusable="true"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        app:borderWidth="0dp"
+        />
 
     <TextView
         android:id="@+id/textView3"
