--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".productSearch"
-    android:background="@color/mustard"
+    android:background="@color/green_nu">
     >
 
     <ProgressBar
