--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="339dp"
         android:layout_height="452dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="64dp"
         android:background="@drawable/shape_login_panel"
         android:backgroundTint="@color/white"
@@ -30,9 +31,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
+            android:textAlignment="center"
             android:layout_marginStart="180dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="232dp"
+            android:layout_marginEnd="22dp"
+            android:layout_marginBottom="236dp"
             android:fontFamily="@font/quicksand_semibold"
             android:text="Forgot password?"
             android:textColor="@color/blue_nu"
@@ -153,7 +155,7 @@
         android:id="@+id/register"
         android:layout_width="290dp"
         android:layout_height="42dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="90dp"
         android:background="@drawable/rounded_corner"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
@@ -170,8 +172,8 @@
         android:id="@+id/textView5"
         android:layout_width="29dp"
         android:layout_height="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:fontFamily="@font/quicksand_medium"
         android:gravity="center"
         android:text="or"
