--- a/app/src/main/res/layout/activity_contact_main.xml
+++ b/app/src/main/res/layout/activity_contact_main.xml
@@ -10,24 +10,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.akshaj02.shopnsplit.contact_main"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/green_nu">
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_pick_contacts"
         android:text="Click to Select Contacts"
+        android:background="@drawable/rounded_corner"
+        app:backgroundTint="@color/blue_li"
+        android:textSize="18dp"
+        android:textAllCaps="false"
+        android:fontFamily="@font/quicksand_bold"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selected Contacts: "
+        android:fontFamily="@font/quicksand_bold"
         android:id="@+id/txt_selected_contacts"
+
         />
 
     <Button
         android:id="@+id/split"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back to splitting" />
+        android:background="@drawable/rounded_corner"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Back to Splitting"
+        android:textAllCaps="false"
+        android:textSize="14dp"
+        app:backgroundTint="@color/blue_li" />
 
 </LinearLayout>
