--- a/app/src/main/res/layout/cardfront.xml
+++ b/app/src/main/res/layout/cardfront.xml
@@ -25,6 +25,7 @@
         android:ems="10"
         android:hint="Card Number"
         android:inputType="textPersonName"
+        android:fontFamily="@font/quicksand_bold"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
@@ -41,6 +42,7 @@
         android:layout_centerVertical="true"
         android:ems="10"
         android:hint="Your Name"
+        android:fontFamily="@font/quicksand_bold"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -59,6 +61,7 @@
         android:layout_alignParentEnd="true"
         android:hint="MM/YY"
         android:inputType="number"
+        android:fontFamily="@font/quicksand_bold"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
