--- a/app/src/main/res/layout/activity_addexp.xml
+++ b/app/src/main/res/layout/activity_addexp.xml
@@ -19,7 +19,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.211">
+        app:layout_constraintVertical_bias="0.211"
+        android:backgroundTint="@color/white">
 
 
         <ImageView
@@ -55,7 +56,7 @@
         android:gravity="center"
         android:text="Add Expense"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/warm_white"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -96,7 +97,7 @@
         android:layout_marginBottom="90dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/rounded_corner"
-        android:backgroundTint="@color/warm_white"
+        android:backgroundTint="@color/white"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
         android:text="Add"
@@ -164,7 +165,7 @@
         android:gravity="center"
         android:text="Contacts"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/warm_white"
+        android:textColor="@color/white"
         app:backgroundTint="@null"
 
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
