--- a/app/src/main/res/layout/activity_new_view.xml
+++ b/app/src/main/res/layout/activity_new_view.xml
@@ -15,7 +15,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="2dp"
         android:layout_marginTop="0dp"
-        android:layout_marginBottom="-4dp" />
+        android:layout_marginBottom="-4dp"
+        />
 
 
 </RelativeLayout>
