--- a/app/src/main/res/layout/activity_split.xml
+++ b/app/src/main/res/layout/activity_split.xml
@@ -67,9 +67,11 @@
         app:layout_constraintVertical_bias="0.763" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
+        android:layout_width="350dp"
         android:layout_height="485dp"
         android:layout_marginTop="128dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:id="@+id/splitRecycler"
 
         android:layout_marginBottom="49dp"
