--- a/app/src/main/res/layout/activity_addexp.xml
+++ b/app/src/main/res/layout/activity_addexp.xml
@@ -10,8 +10,8 @@
 
     <RelativeLayout
         android:id="@+id/linearLayout"
-        android:layout_width="369dp"
-        android:layout_height="437dp"
+        android:layout_width="340dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="64dp"
         android:background="@drawable/shape_login_panel"
         android:orientation="horizontal"
@@ -40,8 +40,8 @@
             android:textSize="14dp"
             android:textColorHint="@color/dark_blue"
             android:fontFamily="@font/quicksand_medium"
-            android:layout_marginLeft="95dp"
-            android:layout_marginTop="162dp"
+            android:layout_marginLeft="81dp"
+            android:layout_marginTop="170dp"
 
             android:text="Dec 3 2022" />
     </RelativeLayout>
@@ -94,7 +94,7 @@
         android:id="@+id/add"
         android:layout_width="166dp"
         android:layout_height="53dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="160dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="@color/white"
@@ -157,8 +157,7 @@
         android:id="@+id/contact"
         android:layout_width="166dp"
         android:layout_height="53dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="@color/dark_blue"
         android:fontFamily="@font/quicksand_semibold"
@@ -171,7 +170,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/text" />
+        app:layout_constraintTop_toBottomOf="@+id/money" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
