Ui final Inshahallah

--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -48,8 +48,8 @@
         android:background="@drawable/main_button"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         android:text="Get Premium"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
@@ -70,7 +70,7 @@
         android:layout_marginBottom="30dp"
         android:fontFamily="@font/quicksand_bold"
         android:text="Premium Plan"
-        android:textColor="@color/blue_nu"
+        android:textColor="@color/dark_blue"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_bold"
         android:text="$4.99/month"
-        android:textColor="@color/blue_nu"
+        android:textColor="@color/dark_blue"
         android:textSize="35dp"
         app:layout_constraintBottom_toTopOf="@+id/payButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:fontFamily="@font/quicksand_bold"
         android:textColor="@color/blue_nu"
         android:text="Premium Features"
-        android:textSize="25dp"
+        android:textSize="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
         android:fontFamily="@font/quicksand_semibold"
         android:text="Get prices of each item"
         android:textSize="18dp"
-        android:textColor="@color/blue_nu"
+        android:textColor="@color/dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -120,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:textColor="@color/blue_nu"
+        android:textColor="@color/dark_blue"
         android:fontFamily="@font/quicksand_semibold"
         android:text="Get help from an expert on call"
         android:textSize="18dp"
@@ -134,7 +134,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_semibold"
         android:text="Add up to 100 items in list"
-        android:textColor="@color/blue_nu"
+        android:textColor="@color/dark_blue"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
