--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:fontFamily="@font/quicksand_bold"
-        android:textSize="35dp"
+        android:textSize="30dp"
         android:text="Terms and Conditions"
         android:textColor="@color/brwn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,9 +23,11 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="380dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:fontFamily="@font/quicksand_medium"
         android:textSize="14dp"
         android:textColor="@color/brwn"
@@ -34,9 +38,11 @@
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="380dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:fontFamily="@font/quicksand_medium"
         android:textSize="14dp"
         android:textColor="@color/brwn"
@@ -47,9 +53,11 @@
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="380dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:fontFamily="@font/quicksand_medium"
         android:textSize="14dp"
         android:textColor="@color/brwn"
