--- a/app/src/main/res/layout/activity_explore_prices.xml
+++ b/app/src/main/res/layout/activity_explore_prices.xml
@@ -5,34 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ExplorePrices"
+    android:background="@color/green_nu"
     >
 
+
     <TextView
+        android:id="@+id/exploreprices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/quicksand_bold"
         android:text="Explore Prices"
-        android:id="@+id/exploreprices"
         android:textColor="@color/blck"
         android:textSize="40dp"
-        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/main_recyclervie"
         app:layout_constraintEnd_toEndOf="@+id/main_recyclervie"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/main_recyclervie" />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recyclervie"
-        android:layout_width="360dp"
-        android:layout_height="629dp"
+        android:layout_width="357dp"
+        android:layout_height="529dp"
+        app:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.944"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exploreprices"
-        app:layout_constraintVertical_bias="0.0"
-        app:elevation="10dp"
-        />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.44" />
 
     <Button
         android:id="@+id/home_button"
