--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreen"
     android:background="#fcfcff">
-    
+
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
 
-        android:src="@drawable/splash"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:src="@drawable/splash">
 
     </pl.droidsonroids.gif.GifImageView>
 
