--- a/app/src/main/res/layout/cardback.xml
+++ b/app/src/main/res/layout/cardback.xml
@@ -10,24 +10,26 @@
         android:layout_width="348dp"
         android:layout_height="449dp"
         android:src="@drawable/cardback"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="141dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/cvv"
         android:layout_width="83dp"
         android:layout_height="42dp"
         android:ems="10"
-        android:hint="CVV"
         android:fontFamily="@font/quicksand_bold"
+        android:hint="CVV"
         android:inputType="numberPassword"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintHorizontal_bias="0.105"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.37" />
+        app:layout_constraintVertical_bias="0.52" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
