--- a/app/src/main/res/layout/cardfront.xml
+++ b/app/src/main/res/layout/cardfront.xml
@@ -23,14 +23,14 @@
         android:layout_alignParentStart="true"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Card Number"
-        android:inputType="textPersonName"
         android:fontFamily="@font/quicksand_bold"
+        android:hint="Card Number"
+        android:inputType="number"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintHorizontal_bias="0.163"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.649" />
@@ -41,14 +41,14 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:ems="10"
-        android:hint="Your Name"
         android:fontFamily="@font/quicksand_bold"
+        android:hint="Your Name"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintHorizontal_bias="0.186"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.534" />
@@ -59,27 +59,27 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:fontFamily="@font/quicksand_bold"
         android:hint="MM/YY"
         android:inputType="number"
-        android:fontFamily="@font/quicksand_bold"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintHorizontal_bias="0.822"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.646" />
 
     <ImageView
         android:id="@+id/cardType"
-        android:layout_width="87dp"
-        android:layout_height="38dp"
+        android:layout_width="98dp"
+        android:layout_height="53dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.911"
+        app:layout_constraintHorizontal_bias="0.908"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.369" />
+        app:layout_constraintVertical_bias="0.366" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
